--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,17 +1,25 @@
 <header id="layout-header">
     <nav>
         <div class="mini-logo">
-            <p>
-                <a href="/"><h2>Team Career Camp<br>Placement Cell</h2></a>
-            </p>
+            <div>
+
+                <a href="/"><img src="/images/logo.jpg" alt="logo"></a>
+
+            </div>
+            <div>
+
+                <h2>Team Career Camp<br>Placement Cell</h2>
+                
+            </div>
+            
         </div>
         <div class="auth-links">
             <ul>
                   <% if(locals.user) { %>
                    <li><a href="/users/profile/<%= user.id %>"><%= user.name %></a></li>
-                   <li><a href="/users/sign-out">Sign Out</a></li>
+                   <li><a href="/">Sign Out</a></li>
                   <% } else { %>
-                    <li><a href="/users/sign-in">Sign In</a></li>
+                    <li><a href="/">Sign In</a></li>
                     <li><a href="/users/sign-up">Sign Up</a></li>
                   <% } %>
             </ul>
