--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -18,7 +18,8 @@
                   <% if(locals.user) { %>
                    <li><a href="/users/profile"><%= user.name %></a></li>
                    <li><a href="/users/add-student">Add Students</a></li>
-                   <li><a href="">Generate CSV</a></li>
+                   <li><a href="/company/home">Company List</a></li>
+                   <li><a href="/">Generate CSV</a></li>
                    <li><a href="/">Sign Out</a></li>
                   <% } else { %>
                     <li><a href="/">Sign In</a></li>
