Passport authentication set up

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -20,7 +20,7 @@
                    <li><a href="/users/add-student">Add Students</a></li>
                    <li><a href="/company/home">Company List</a></li>
                    <li><a href="/">Generate CSV</a></li>
-                   <li><a href="/">Sign Out</a></li>
+                   <li><a href="/users/sign-out">Sign Out</a></li>
                   <% } else { %>
                     <li><a href="/">Sign In</a></li>
                     <li><a href="/users/sign-up">Sign Up</a></li>
