--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
         <h3 class="heading">Sign In to</h3>
         <h6 class="heading">Placement Cell Career Camp</h6>
         
-        <form action="/users/sign-in" method="post">
+        <form action="/users/create-session" method="post">
             <input type="email" name="email" placeholder="Email ID" required>
             <input type="text" name="password" placeholder="Password" required>
             <input id="form-submit-button" type="submit" value="Sign-In">
