--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -16,7 +16,7 @@
         <div class="auth-links">
             <ul>
                   <% if(locals.user) { %>
-                   <li><a href="/users/profile"><%= user.name %></a></li>
+                   <li id="profile-user-name"><a href="/users/profile">Welcome <%= user.name %>!</a></li>
                    <li><a href="/users/add-student">Add Students</a></li>
                    <li><a href="/company/home">Company List</a></li>
                    <li><a href="/">Generate CSV</a></li>
