--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -19,7 +19,7 @@
                    <li id="profile-user-name"><a href="/users/profile">Welcome <%= user.name %>!</a></li>
                    <li><a href="/users/add-student">Add Students</a></li>
                    <li><a href="/company/home">Company List</a></li>
-                   <li><a href="/">Generate CSV</a></li>
+                   <li><a href="/users/download-csv">Generate CSV</a></li>
                    <li><a href="/users/sign-out">Sign Out</a></li>
                   <% } else { %>
                     <li><a href="/">Sign In</a></li>
